--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,11 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: myapp_production
-  username: myapp
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  port: 5432
+  database: wedding_production
+  pool: 5
+  username: postgres
+  password: password
