--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,6 @@ test:
 production:
   host: localhost
   port: 5432
-  url: <%= ENV['DATABASE_URL'] %>
   database: wedding_production
+  username: wedding
   password: <%= ENV['WEDDING_DATABASE_PASSWORD'] %>
