--- a/config/database.yml
+++ b/config/database.yml
@@ -15,5 +15,5 @@ production:
   <<: *default
   url: <%= ENV['DATABASE_URL'] %>
   database: wedding_production
-  username: wedding
+  username: postgres
   password: <%= ENV['WEDDING_DATABASE_PASSWORD'] %>
